Fixed next launch rocket-img scaling issue on safari

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -98,6 +98,6 @@ button {
   height: auto;
 }
 
-img {
+.header-logo {
   width: 50%;
 }
