--- a/src/styles/components/_Countdown.scss
+++ b/src/styles/components/_Countdown.scss
@@ -10,13 +10,14 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    width: 100%;
+
 }
 
 .mission-name-box {
     padding-bottom: 5px;
     border-bottom: $blue 2px solid;
     text-transform: uppercase;
+    margin-bottom: 20px;
 }
 
 .clock-box {
@@ -54,19 +55,19 @@
 }
 
 
-
 .count-rocket-box {
     display: flex;
-    margin-left: auto;
-    justify-content: center;
-    width: 30%;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
     height: 100%;
 }
 
 .rocket-img {
+    margin-bottom: 20px;
     object-fit: fill;
     height: 520px;
-    width: auto;
+    width: 50px;
 }
 
 .nl-details {
